--- a/psykeon-tarot-journal.html
+++ b/psykeon-tarot-journal.html
@@ -342,7 +342,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
             const ctx = canvas.getContext('2d');
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
-            const codePoints = [0x2660, 0x2665, 0x2666, 0x2663, 0x2648, 0x2649, 0x264A, 0x264B, 0x264C, 0x264D, 0x264E, 0x264F, 0x2650, 0x2651, 0x2652, 0x2653, 0x2609, 0x263D, 0x263F, 0x2640, 0x2642, 0x2643, 0x2644, 0x2645, 0x2646, 0x2647, 0x260C, 0x26B9, 0x25A1, 0x25B3, 0x260D, ...Array.from({length: 0x16EA - 0x16A0 + 1}, (_, i) => 0x16A0 + i)];
+            const codePoints = [0x2660, 0x2665, 0x2666, 0x2663, 0x2648, 0x2649, 0x264A, 0x264B, 0x264C, 0x264D, 0x264E, 0x264F, 0x2650, 0x2651, 0x2652, 0x2653, 0x2609, 0x263D, 0x263F, 0x2640, 0x2642, 0x2643, 0x2644, 0x2645, 0x2646, 0x2647, 0x260C, 0x26B9, 0x25A1, 0x25B3, 0x260D, 0x0030, 0x0049, 0x0049, 0x0049, 0x0049, 0x0049, 0x0056, 0x0056, 0x0049, 0x0056, 0x0049, 0x0049, 0x0056, 0x0049, 0x0049, 0x0049, 0x0049, 0x0058, 0x0058, 0x0049, 0x0058, 0x0049, 0x0049, 0x0058, 0x0049, 0x0049, 0x0049, 0x0058, 0x0049, 0x0056, 0x0058, 0x0056, 0x0058, 0x0056, 0x0049, 0x0058, 0x0056, 0x0049, 0x0049, 0x0058, 0x0056, 0x0049, 0x0049, 0x0049, 0x0058, 0x0049, 0x0058, 0x0058, 0x0058, 0x0058, 0x0049];
             const letters = String.fromCodePoint(...codePoints);
             const fontSize = 20;
             let columns = Math.floor(canvas.width / fontSize);
